# opencl_template

./: CMakeLists.txt  README.md  simple_copy.cl
source/: main.cpp  opencl_program.cpp  opencl_program.hpp
